[package]
name = "catenary-gen"
version = "0.1.0"
edition = "2021"

[dependencies]
lodepng = { version = "3.10", default-features = false, features = [
    "rust_backend",
] }
bresenham-curves-circles-rs = { git = "https://github.com/shoebe/bresenham-curves-circles-rs" }
tiny-skia = "0.11.4"
anyhow = "1.0.86"
argmin = "0.10.0"
